# hxnu-rustc-compiler-x86_64

./: Cargo.toml  README.md  rust-toolchain.toml
crates/hxnu-cargo/: Cargo.toml  README.md
crates/hxnu-cargo/src/: main.rs
crates/hxnu-rustc/: Cargo.toml  README.md
crates/hxnu-rustc/src/: main.rs
crates/hxnu-sdk/: Cargo.toml  README.md
crates/hxnu-sdk/src/: main.rs
crates/hxnu-target-spec/: Cargo.toml  README.md
crates/hxnu-target-spec/src/: lib.rs
docs/: architecture.md  integration.md  release-v0.1.0-checklist.md  usage.md
examples/: README.md
examples/init-like/: Cargo.toml
examples/init-like/src/: main.rs
examples/no_std-hello/: Cargo.toml
scripts/: release-artifacts.sh  verify-elf.sh
targets/: aarch64-unknown-hxnu.json  powerpc64-unknown-hxnu.json  powerpc64le-unknown-hxnu.json  x86_64-unknown-hxnu.json
