[workspace]
members = [
  "crates/hxnu-rustc",
  "crates/hxnu-cargo",
  "crates/hxnu-sdk",
  "crates/hxnu-target-spec",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["HXNU Contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.15"
